--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "microservices/temperature-processing"]
 	path = microservices/temperature-processing
 	url = https://github.com/LesleyDiniz/ems-algasensors-temperature-processing.git
+[submodule "microservices/device-management"]
+	path = microservices/device-management
+	url = https://github.com/LesleyDiniz/ems-algasensors-device-management.git
